[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "devhub"
version = "0.1.0"
description = "Unified async Python client for developer communities — Dev.to, Bluesky, Twitter/X, Reddit"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Son Seong Joon", email = "sonsj97@plateer.com" },
]
keywords = ["social", "devto", "bluesky", "twitter", "reddit", "api", "async", "cross-post"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: AsyncIO",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
devto = []
bluesky = ["atproto>=0.0.55"]
twitter = ["tweepy>=4.14.0", "twikit>=2.0.0"]
twitter-read = ["twikit>=2.0.0"]
twitter-write = ["tweepy>=4.14.0"]
reddit = ["asyncpraw>=7.7.0"]
all = [
    "devhub[devto]",
    "devhub[bluesky]",
    "devhub[twitter]",
    "devhub[reddit]",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "mypy>=1.8.0",
    "ruff>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/SonAIengine/devhub"
Repository = "https://github.com/SonAIengine/devhub"
Issues = "https://github.com/SonAIengine/devhub/issues"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["atproto.*", "tweepy.*", "twikit.*", "asyncpraw.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
